# OpenCV

./: .gitignore  README.md
HelloOpenCV/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt
